2008-10-20  Christian Persch  <chpe@gnome.org>

	Bug 557059 – crash when compositing emblems with icon

	* gtk/gtkicontheme.c: (apply_emblems): Copy the pixbuf before using it
	with gtk_pixbuf_composite, in case its pixdata is read-only (mmaped
	from icon cache or builtins).

2008-10-20  Murray Cumming  <murrayc@murrayc.com>

	* gtk/gtkiconview.c: gtk_icon_view_set_tooltip_row(), 
	gtk_icon_view_set_tooltip_item():
	* gtk/gtktreeview.c: gtk_icon_view_set_tooltip_row(), 
	gtk_icon_view_set_tooltip_cell():
	Documentation: Mention the simple set_tooltip_column() 
	alternative.

2008-10-18  Tor Lillqvist  <tml@novell.com>

	* gdk/win32/gdkevents-win32.c (gdk_event_translate): On
	WM_WINDOWPOSCHANGING, don't dereference windowpos in the debugging
	output without setting it first.

2008-10-18  Tor Lillqvist  <tml@novell.com>

	Bug 556578 - GIMP windows stay on top of other windows

	* gdk/win32/gdkevents-win32.c (ensure_stacking_on_unminimize)
	(ensure_stacking_on_window_pos_changing)
	(ensure_stacking_on_activate_app): Ignore unmapped windows in the
	loops where we look for the lowest "transient-type" window.

	(gdk_event_translate): Don't call
	ensure_stacking_on_window_pos_changing() or
	ensure_stacking_on_activate_app() for unmapped windows.

2008-10-16  Marek Kasik  <mkasik@redhat.com>

	Bug 556527 - The current page property is not passed to
	GtkPrintUnixDialog

	* gtk/gtkprintoperation-unix.c: pass current-page property
	to GtkPrintUnixDialog

2008-10-15  Michael Natterer  <mitch@imendio.com>

	* gdk/gdkapplaunchcontext.h (GDK_IS_APP_LAUNCH_CONTEXT): fix typo
	in the type name so the macro becomes usable.

2008-10-14  Christian Dywan  <christian@imendio.com>

	556150 – gtk 'object' property test fixing

	* gtk/tests/object.c (list_ignore_properties):
        Remove some recently fixed properties from the exception list

2008-10-13  Matthias Clasen  <mclasen@redhat.com>

	Bug 555779 – GtkCellRendererPixbuf crashed on failed GIcon lookup
